<resources>
    <string name="abcd">,41c5b5840e55effbf199a8547c3413ff</string>
    <string name="efgh">92df2690f459cf758b20497662751a42</string>
    <string name="app_name">Ép thẻ FO3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="firstloading">"로딩중입니다..
변경된 정보가 있는 경우 시간이 오래 걸릴 수도 있습니다.."</string>
    <string name="alert_title">피파온라인3 강화</string>
    <string name="alert_end_question">종료하시겠습니까?</string>
    <string name="alert_ok">예</string>
    <string name="alert_cancel">아니오</string>
    <string name="alert_all_delete_question">강화 목록의 모든 항목을 삭제하시겠습니까?</string>
    <string name="search_not_value">검색값이 없습니다.</string>
    <string name="search_not_complate">검색결과가 없습니다.</string>
    <string name="search_result_over">검색결과가 많아 상위 500건만 보여집니다.</string>
    <string name="search_loading">선수 목록을 불러오고 있습니다...</string>
    <string name="cons_loading">보관 목록을 불러오고 있습니다...</string>
    <string name="cons_not_data">선수를 추가 해주세요.</string>
    <string name="cons_not_value">항목을 선택 해 주세요.</string>
    <string name="cons_delete_one_data">1개의 항목만 선택 해 주세요.</string>
    <string name="cons_not_selected">선택된 항목이 없습니다.</string>
    <string name="cons_not_cons">더이상 강화 할 수 없습니다.</string>
    <string name="cons_move_qeustion">을(를) 나만의 팀으로 이동하시겠습니까?</string>
    <string name="plus1">1장</string>
    <string name="plus10">10장</string>
    <string name="plus50">50장</string>
    <string name="detailInfo">상세정보</string>
    <string name="conspop1">강화목록</string>
    <string name="conspop2">보관함</string>
    <string name="pack_title">선수팩</string>
    <string name="pack_spinner">선수팩을 선택하세요</string>
    <string name="notice_title">공지</string>
    <string name="notice_ok">확인</string>
    <string name="notice_check">다시 열지 않기</string>
    <string name="trade_question">을(를) 선택하시겠습니까?</string>
    <string name="trade_title">선수를 선택하세요.</string>
    <string name="comm_000">Có</string>
    <string name="comm_001">Không có</string>
    <string name="comm_002">Không thể kết nối đến máy chủ.</string>
    <string name="comm_003">Xác nhận</string>
    <string name="comm_004">Lưu</string>
    <string name="comm_005">Đóng</string>
    <string name="comm_006">Đã lưu.</string>
    <string name="comm_007">Tất cả</string>
    <string name="comm_008">Tìm kiếm</string>
    <string name="comm_009">Hồ sơ</string>
    <string name="comm_010">Hủy bỏ</string>
    <string name="comm_011">Đăng ký</string>
    <string name="comm_012">Đang tìm kiếm giá Hàn Quốc</string>
    <string name="comm_013">Không có thông tin.</string>
    <string name="comm_014">Khoảng</string>
    <string name="comm_015">Giá</string>
    <string name="comm_016">Giá trị câu lạc bộ</string>
    <string name="comm_017">được lưu.</string>
    <string name="main_000">Fifa Online 3 ép thẻ</string>
    <string name="main_001">Bạn có muốn thoát?</string>
    <string name="main_002">"Đang tải. .Nếu thông tin được thay đổi, nó có thể mất một thời gian dài. . "</string>
    <string name="main_003">FO3 Zone - Giao lưu</string>
    <string name="main_004">Không hiển thị lại</string>
    <string name="main_005">Thiết lập</string>
    <string name="main_006">Thiết lập cấp độ cầu thủ</string>
    <string name="main_007">Tất cả các thông tin được thiết lập bởi mức độ hiển thị.</string>
    <string name="main_008">E-mail</string>
    <string name="swhere_000">Chọn League.</string>
    <string name="swhere_001">Phải</string>
    <string name="swhere_002">Trái</string>
    <string name="swhere_003">Cả hai</string>
    <string name="swhere_004">Nhập tên cầu thủ.</string>
    <string name="swhere_005">Mùa</string>
    <string name="swhere_006">Tổng thể</string>
    <string name="swhere_007">hơn</string>
    <string name="swhere_008">ít hơn</string>
    <string name="swhere_009">Chân thuận</string>
    <string name="swhere_010">Di chuyển kỹ năng</string>
    <string name="swhere_011">Giải</string>
    <string name="swhere_012">Nhóm</string>
    <string name="swhere_013">Quốc tịch</string>
    <string name="swhere_014">Chiều cao</string>
    <string name="swhere_015">(Cm) hơn</string>
    <string name="swhere_016">(Cm) ít hơn</string>
    <string name="swhere_017">Trọng lượng</string>
    <string name="swhere_018">(Kg) hơn</string>
    <string name="swhere_019">(Kg) ít hơn</string>
    <string name="swhere_020">Thiết lập lại</string>
    <string name="search_000">Tải danh sách các cầu thủ. .</string>
    <string name="search_001">Có rất nhiều kết quả.Vì vậy, chỉ hiển thị top 500 cầu thủ tốt nhất.</string>
    <string name="search_002">Không có kết quả.</string>
    <string name="search_003">1 thẻ</string>
    <string name="search_004">10 thẻ</string>
    <string name="search_005">50 thẻ</string>
    <string name="pinfo_000">Di chuyển kỹ năng</string>
    <string name="pinfo_001">Dứt điểm</string>
    <string name="pinfo_002">Lực sút</string>
    <string name="pinfo_003">Cứa lòng</string>
    <string name="pinfo_004">Sút xa</string>
    <string name="pinfo_005">Volley</string>
    <string name="pinfo_006">Đá phạt</string>
    <string name="pinfo_007">Penalty</string>
    <string name="pinfo_008">Đánh đầu</string>
    <string name="pinfo_009">Chọn vị trí</string>
    <string name="pinfo_010">Tốc độ</string>
    <string name="pinfo_011">Tăng tốc</string>
    <string name="pinfo_012">Sự nhanh nhẹn</string>
    <string name="pinfo_013">Phản ứng</string>
    <string name="pinfo_014">Nhảy</string>
    <string name="pinfo_015">Stamina</string>
    <string name="pinfo_016">Sức mạnh</string>
    <string name="pinfo_017">Thăng bằng bằng</string>
    <string name="pinfo_018">Chuyền ngắn</string>
    <string name="pinfo_019">Chuyền dài</string>
    <string name="pinfo_020">Crossing</string>
    <string name="pinfo_021">Ball Control</string>
    <string name="pinfo_022">Lừa bóng</string>
    <string name="pinfo_023">Tốc độ Dribble</string>
    <string name="pinfo_024">Nâng cao nhận thức chiến thuật</string>
    <string name="pinfo_025">Tầm nhìn</string>
    <string name="pinfo_026">Đứng Tackle</string>
    <string name="pinfo_027">Trượt Tackle</string>
    <string name="pinfo_028">Đánh dấu</string>
    <string name="pinfo_029">Xâm lược</string>
    <string name="pinfo_030">GK bay người</string>
    <string name="pinfo_031">GK Xử lý</string>
    <string name="pinfo_032">GK Đá</string>
    <string name="pinfo_033">GK Phản xạ</string>
    <string name="pinfo_034">GK chọn vị trí</string>
    <string name="pack_000">Gói cầu thủ</string>
    <string name="pack_001">Mở</string>
    <string name="pack_002">Hãy chọn gói cầu thủ</string>
    <string name="nselect_000">Người chơi phải làm đến 200 người.</string>
    <string name="nselect_001">Nhập tên cầu thủ</string>
    <string name="nselect_002">Người chơi soạn thảo</string>
    <string name="nselect_003">* Các danh sách bên phải là danh sách các vận động viên soạn thảo.Nhấn các cầu thủ bị loại ra khỏi dự thảo.Danh sách còn lại là một danh sách tìm kiếm.Nếu bạn chạm vào người chơi sẽ được thêm vào danh sách bên phải.Tên cầu thủ dự thảo sẽ được hiển thị màu vàng.</string>
    <string name="nselect_004">Đã được được thêm vào.</string>
    <string name="nselect_005">Không thể thêm nữa.</string>
    <string name="cons_000">Di chuyển</string>
    <string name="cons_001">Nâng cấp</string>
    <string name="cons_002">Hãy chọn một mục.</string>
    <string name="cons_003">Loading. .</string>
    <string name="cons_004">Thêm cầu thủ.</string>
    <string name="cons_005">U0009Đến đội của tôi?</string>
    <string name="cons_006">Không thể nâng cấp nữa.</string>
    <string name="trade_000">Loading. .</string>
    <string name="trade_001">Thêm cầu thủ.</string>
    <string name="trade_002">Chọn cầu thủ:</string>
    <string name="trade_003">Phạm vi của tổng thể:</string>
    <string name="trade_004">Phạm vi tăng cường:</string>
    <string name="trade_005">Đề xuất nhận được:</string>
    <string name="trade_006">Bạn muốn hủy hợp đồng các cầu thủ này không? Hành động này sẽ không thể hoàn tác.</string>
    <string name="trade_007">Chọn cầu thủ.</string>
    <string name="trade_008">Bạn có muốn giao dịch không?</string>
    <string name="trade_009">Hãy chọn ít nhất hai người.</string>
    <string name="trade_010">Bạn có muốn xóa?</string>
    <string name="trade_011">Chọn?</string>
    <string name="trade_012">Trao đổi cầu thủ</string>
    <string name="run_000">Nâng cấp thành công!</string>
    <string name="run_001">Nâng cấp thất bại!</string>
    <string name="myteam_000">Thay đổi nhóm</string>
    <string name="myteam_001">Đặt tất cả các cầu thủ chính.</string>
    <string name="myteam_002">Thêm cầu thủ.</string>
    <string name="myteam_003">Squad</string>
    <string name="myteam_004">Đội</string>
    <string name="myteam_005">di chuyển vào danh sách nâng cấp?</string>
    <string name="myteam_006">Hãy chọn một cầu thủ để thay thế.</string>
    <string name="myteam_007">Ðã bao gồm trong các cầu thủ chính.</string>
    <string name="myteam_008">Tới nâng cấp</string>
    <string name="myteam_009">Thay đổi vị trí</string>
    <string name="myteam_011">Giải</string>
    <string name="myteam_012">Đội</string>
    <string name="squad_000">Lưu?</string>
    <string name="commu_000">Không thể có được ID của người dùng.</string>
    <string name="commu_001">Bắt nguồn từ các thiết bị không thể được đăng ký trong đội hình.</string>
    <string name="commu_002">Sử dụng cảnh báo.Hãy liên hệ với chúng tôi bằng e-mail.</string>
    <string name="commu_003">Người sử dụng xóa.Hãy liên hệ với chúng tôi bằng e-mail.</string>
    <string name="commu_004">Đăng ký nickname</string>
    <string name="commu_005">Xin vui lòng nhập một biệt hiệu.</string>
    <string name="commu_006">Có thô tục.</string>
    <string name="commu_007">Có một nhân vật không hợp lệ.</string>
    <string name="commu_008">Biệt danh đã được sử dụng.</string>
    <string name="commu_009">Biệt danh của tôi</string>
    <string name="commu_010">Nhập nội dung.</string>
    <string name="commu_011">Đăng ký được hoàn thành.</string>
    <string name="commu_012">Nickname</string>
    <string name="commu_013">"Đăng ký biệt danh của bạn. Chỉ có một người sử dụng mỗi tên thiết bị có thể được đăng ký Tên người dùng không thể thay đổi một lần đăng ký. Lên đến 10 ký tự.(Biệt danh không lành mạnh có thể được loại bỏ mà không cần thông báo.) "</string>
    <string name="commu_014">Đăng ký bình luận</string>
    <string name="commu_015">Tiếp theo</string>
    <string name="commu_016">Xin vui lòng nhập nhận xét.</string>
    <string name="commu_017">Chung</string>
    <string name="sboast_000">Đánh giá</string>
    <string name="sboast_001">mới nhất</string>
    <string name="sboast_002">Bình luận</string>
    <string name="sboast_003">Không đăng ký đội hình.</string>
    <string name="sboast_004">Đặt tất cả các cầu thủ chính.</string>
    <string name="sboast_005">"Đăng ký Nickname giờ là hoàn tất.Vui lòng đăng ký lại đội hình. "</string>
    <string name="sboast_006">Nội dung hoặc Nickname</string>
    <string name="sboast_007">Đội hình của tôi đăng ký</string>
    <string name="sboast_008">Đăng ký đội hình của tôi</string>
    <string name="sboast_009">Nếu bạn đã đăng ký một nhóm nghiên cứu, thông tin đăng ký sẽ được đăng ký mới sau khi bị xóa.</string>
    <string name="sboast_010">Hãy nhập mô tả.</string>
    <string name="sboast_011">Đánh giá</string>
    <string name="sbdtl_000">Đánh giá</string>
    <string name="sbdtl_001">Bình luận</string>
    <string name="sbdtl_008">Đánh giá</string>
    <string name="sbdtl_009">Tình trạng</string>
    <string name="sbdtl_010">1 điểm</string>
    <string name="sbdtl_011">2 điểm</string>
    <string name="sbdtl_012">3 điểm</string>
    <string name="sbdtl_013">4 điểm</string>
    <string name="sbdtl_014">5 điểm</string>
    <string name="free_000">Vui lòng nhập tiêu đề.</string>
    <string name="free_002">Nhập nội dung.</string>
    <string name="free_006">Biệt danh của tôi:</string>
</resources>