<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="#ff151415" android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
        <Button android:textAppearance="?android:textAppearanceSmallInverse" android:gravity="center" android:id="@id/freeboardCodeValue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/commu_017" android:layout_weight="0.2" />
        <EditText android:id="@id/freeboardtitle" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/free_000" android:maxLength="100" android:layout_weight="0.8" android:inputType="text" android:imeOptions="actionSearch" />
    </LinearLayout>
    <EditText android:gravity="top" android:id="@id/freeboardbody" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/free_002" android:lines="8" android:singleLine="false" android:maxLength="500" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffffffff" android:gravity="right" android:id="@id/username" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/free_006" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:id="@id/ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/comm_011" android:layout_weight="0.5" />
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/comm_010" android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>