<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/pop_btn1" android:background="@layout/commbtn" android:padding="2.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/search_003" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/pop_btn2" android:background="@layout/commbtn" android:padding="2.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/search_004" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/pop_btn3" android:background="@layout/commbtn" android:padding="2.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/search_005" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/pop_btn4" android:background="@layout/commbtn" android:padding="2.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/comm_009" android:layout_weight="1.0" />
</LinearLayout>