<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@*android:color/background_light" android:paddingLeft="1.0dip" android:paddingTop="1.0dip" android:paddingRight="1.0dip" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="65.0dip" android:layout_height="wrap_content" android:text="@string/sboast_000" />
    <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sboast_001" />
    <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sboast_002" />
</LinearLayout>