<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffffffff" android:id="@id/username" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffffffff" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/commu_016" />
    <EditText android:gravity="top" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="3" android:singleLine="false" android:maxLength="200" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:id="@id/ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/comm_011" android:layout_weight="0.5" />
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/comm_010" android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>