<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff181d18" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/squadboastTop" android:background="#ff151415" android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
        <EditText android:textColor="#ffe9f8fb" android:textColorHint="#ff9fa3a6" android:id="@id/squadboastSearchValue" android:background="#ff000000" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="5.0dip" android:hint="@string/sboast_006" android:layout_weight="0.55" android:inputType="text" android:imeOptions="actionSearch" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/squadboastOrderValue" android:background="@layout/commbtn" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="5.0dip" android:text="@string/sboast_000" android:layout_weight="0.25" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/squadboastSearchBtn" android:background="@layout/commbtn" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="5.0dip" android:text="@string/comm_008" android:layout_weight="0.2" />
    </LinearLayout>
    <ListView android:id="@id/squadboast_listview" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="#ffffffff" android:dividerHeight="0.0px" android:layout_above="@id/squadboastBottom" android:layout_below="@id/squadboastTop" android:layout_centerVertical="true" android:splitMotionEvents="false" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/squadboastBottom" android:background="#ff151415" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0" android:layout_above="@id/ads">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/mysquadview" android:background="@layout/commbtn" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/sboast_007" android:layout_weight="0.45" />
        <TextView android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_weight="0.15" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff1b1d1f" android:gravity="center" android:id="@id/addsquad" android:background="@layout/commbtn" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/sboast_008" android:layout_weight="0.4" />
    </LinearLayout>
    <com.mocoplex.adlib.AdlibAdViewContainer android:id="@id/ads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</RelativeLayout>