<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@*android:color/background_light" android:paddingLeft="1.0dip" android:paddingTop="1.0dip" android:paddingRight="1.0dip" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sbdtl_008" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:text="@string/sbdtl_009" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sbdtl_010" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:text="0명" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sbdtl_011" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:text="0명" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sbdtl_012" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:text="0명" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sbdtl_013" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:text="0명" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="140.0dip" android:layout_height="wrap_content" android:weightSum="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ffffffff" android:gravity="center" android:background="#ff010101" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/sbdtl_014" android:layout_weight="0.6" />
        <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textColor="#ff010101" android:gravity="center" android:background="#ffbbbbbb" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:text="0명" android:layout_weight="0.4" />
    </LinearLayout>
</LinearLayout>